--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "pickastudio",
+  "name": "chat_app_now",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@syncfusion/ej2-react-calendars": "^19.2.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.16.3",
-    "firebase": "^4.13.1",
+    "firebase": "^9.0.1",
     "react": "^17.0.2",
-    "react-components": "^0.5.1",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "react-scroll": "^1.8.4",
-    "react-select": "^4.3.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
